--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site Settings
-title: Start Jekyll
-email: taniarascia@gmail.com
+title: Blog CB Media Group
+email: cb-mediagroup@gmail.com
 description: >
   A guide to getting started with Jekyll.
-baseurl: "/startjekyll"
-url: "http://taniarascia.github.io"
-twitter_username: taniarascia
-github_username:  taniarascia
+baseurl: "/blog-cb-media"
+url: "http://cb-media.github.io"
+twitter_username: cb-mediagroup
+github_username:  cb-mediagroup
 # Build Settings
 sass:
   sass_dir: _sass
