--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Blog CB Media Group
 email: cb-mediagroup@gmail.com
 description: >
   A guide to getting started with Jekyll.
-baseurl: "/blog-cb-media"
-url: "http://cb-media.github.io"
+baseurl: "https://cb-media.github.io"
+url: "https://cb-media.github.io"
 twitter_username: cb-mediagroup
 github_username:  cb-mediagroup
 # Build Settings
