--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: Blog CB Media Group
+title: CB Media Group
 email: cb-mediagroup@gmail.com
 description: >
   A guide to getting started with Jekyll.
